Fix alignment properties in #about and .about-header
Replaced 'item-align' with 'align-items' for proper alignment in the #about section and updated .about-header styles.

--- a/style.css
+++ b/style.css
@@ -344,22 +344,20 @@ nav {
 /* -------- About Area Style -------- */
 #about {
   text-align: center;
-  item-align: center;
+  align-items: center;
 }
 
-#about p{
+.about-header{
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  item-align: center;
+  align-items: center;
 }
 
 .about-heading {
   margin: 30px 0 30px;
 }
 
-.about-this-page-text{
-  text-align: center;
-  item-align: center;
-}
 
 /* -------- Footer -------- */
 .footer {
